@@ -8,6 +8,7 @@
 - Bugfix: The method analysis doesn't take traits into account.
 - Bugfix: The property analysis doesn't take traits into account.
 - Bugfix: Remove the copy-pasta spaces from the skins.
+- Bugfix: Cut off parameter analysis
 
 3.0.1
 - Change: All singelton classes now add themself to the pool as
